--- a/Mindbox.Data.Linq/Mindbox.Data.Linq.csproj
+++ b/Mindbox.Data.Linq/Mindbox.Data.Linq.csproj
@@ -2,7 +2,7 @@
 <Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
+    <Configuration Condition=" '$(Configuration)' == '' ">Release</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{47EE70C4-FF67-4810-9AC6-D72A61ABA852}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -58,11 +58,30 @@
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="IdentityManager.cs" />
     <Compile Include="Mapping\Accessors.cs" />
+    <Compile Include="Mapping\AttributedMetaAssociation.cs" />
+    <Compile Include="Mapping\AttributedMetaDataMember.cs" />
+    <Compile Include="Mapping\AttributedMetaFunction.cs" />
     <Compile Include="Mapping\AttributedMetaModel.cs" />
+    <Compile Include="Mapping\AttributedMetaParameter.cs" />
+    <Compile Include="Mapping\AttributedMetaTable.cs" />
+    <Compile Include="Mapping\AttributedMetaType.cs" />
+    <Compile Include="Mapping\AttributedRootType.cs" />
+    <Compile Include="Mapping\AttributeMappingSource.cs" />
     <Compile Include="Mapping\Attributes.cs" />
+    <Compile Include="Mapping\InheritanceBaseFinder.cs" />
     <Compile Include="Mapping\MappedMetaModel.cs" />
     <Compile Include="Mapping\MappingSource.cs" />
+    <Compile Include="Mapping\MetaAccessor.cs" />
+    <Compile Include="Mapping\MetaAssociation.cs" />
+    <Compile Include="Mapping\MetaDataMember.cs" />
+    <Compile Include="Mapping\MetaFunction.cs" />
     <Compile Include="Mapping\MetaModel.cs" />
+    <Compile Include="Mapping\MetaParameter.cs" />
+    <Compile Include="Mapping\MetaTable.cs" />
+    <Compile Include="Mapping\MetaType.cs" />
+    <Compile Include="Mapping\MethodFinder.cs" />
+    <Compile Include="Mapping\XmlMappingReader.cs" />
+    <Compile Include="Mapping\XmlMappingSource.cs" />
     <Compile Include="misc\SecurityUtils.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Provider\IDataServices.cs" />
