--- a/Mindbox.Data.Linq.Tests/Mindbox.Data.Linq.Tests.csproj
+++ b/Mindbox.Data.Linq.Tests/Mindbox.Data.Linq.Tests.csproj
@@ -50,7 +50,11 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="InheritanceConfigurationTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestEntity1.cs" />
+    <Compile Include="TestEntity2.cs" />
+    <Compile Include="TestEntity3.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Mindbox.Data.Linq\Mindbox.Data.Linq.csproj">
