--- a/Mindbox.Data.Linq.Tests/Mindbox.Data.Linq.Tests.csproj
+++ b/Mindbox.Data.Linq.Tests/Mindbox.Data.Linq.Tests.csproj
@@ -50,11 +50,18 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="DbModelBuilderTests.cs" />
     <Compile Include="InheritanceConfigurationTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestEntity1.cs" />
     <Compile Include="TestEntity2.cs" />
     <Compile Include="TestEntity3.cs" />
+    <Compile Include="TestEntity7.cs" />
+    <Compile Include="TestEntity6.cs" />
+    <Compile Include="TestEntity4.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="TestEntity5.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Mindbox.Data.Linq\Mindbox.Data.Linq.csproj">
