--- a/Mindbox.Data.Linq/Mindbox.Data.Linq.csproj
+++ b/Mindbox.Data.Linq/Mindbox.Data.Linq.csproj
@@ -59,9 +59,21 @@
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="IdentityManager.cs" />
     <Compile Include="Mapping\Accessors.cs" />
+    <Compile Include="Mapping\AssociationAttribute.cs" />
     <Compile Include="Mapping\AttributedMetaAssociation.cs" />
     <Compile Include="Mapping\AttributedMetaDataMember.cs" />
     <Compile Include="Mapping\AttributedMetaFunction.cs" />
+    <Compile Include="Mapping\AutoSync.cs" />
+    <Compile Include="Mapping\ColumnAttribute.cs" />
+    <Compile Include="Mapping\DataAttribute.cs" />
+    <Compile Include="Mapping\DatabaseAttribute.cs" />
+    <Compile Include="Mapping\FunctionAttribute.cs" />
+    <Compile Include="Mapping\InheritanceMappingAttribute.cs" />
+    <Compile Include="Mapping\ParameterAttribute.cs" />
+    <Compile Include="Mapping\ResultTypeAttribute.cs" />
+    <Compile Include="Mapping\TableAttribute.cs" />
+    <Compile Include="Mapping\UpdateCheck.cs" />
+    <Compile Include="Mindbox.Data.Linq\Mapping\Entity\IEntityTypeConfiguration.cs" />
     <Compile Include="Mindbox.Data.Linq\Mapping\MindboxMappingConfiguration.cs" />
     <Compile Include="Mindbox.Data.Linq\Mapping\MindboxMetaModel.cs" />
     <Compile Include="Mapping\AttributedMetaModel.cs" />
@@ -71,7 +83,7 @@
     <Compile Include="Mapping\AttributedRootType.cs" />
     <Compile Include="Mindbox.Data.Linq\Mapping\MindboxMappingSource.cs" />
     <Compile Include="Mapping\AttributeMappingSource.cs" />
-    <Compile Include="Mapping\Attributes.cs" />
+    <Compile Include="Mapping\ProviderAttribute.cs" />
     <Compile Include="Mapping\InheritanceBaseFinder.cs" />
     <Compile Include="Mapping\MappedMetaModel.cs" />
     <Compile Include="Mapping\MappingSource.cs" />
@@ -87,6 +99,7 @@
     <Compile Include="Mapping\XmlMappingReader.cs" />
     <Compile Include="Mapping\XmlMappingSource.cs" />
     <Compile Include="Mindbox.Data.Linq\Mapping\MindboxRootType.cs" />
+    <Compile Include="Mindbox.Data.Linq\Mapping\TableAttributeByRootType.cs" />
     <Compile Include="misc\SecurityUtils.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Provider\IDataServices.cs" />
