--- a/Mindbox.Data.Linq/Mindbox.Data.Linq.csproj
+++ b/Mindbox.Data.Linq/Mindbox.Data.Linq.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Mapping\ResultTypeAttribute.cs" />
     <Compile Include="Mapping\TableAttribute.cs" />
     <Compile Include="Mapping\UpdateCheck.cs" />
+    <Compile Include="Mindbox.Data.Linq\EntityFrameworkIncompatibility.cs" />
     <Compile Include="Mindbox.Data.Linq\Mapping\Entity\IEntityTypeConfiguration.cs" />
     <Compile Include="Mindbox.Data.Linq\Mapping\MindboxMappingConfiguration.cs" />
     <Compile Include="Mindbox.Data.Linq\Mapping\MindboxMetaModel.cs" />
