--- a/Mindbox.Data.Linq/Mindbox.Data.Linq.csproj
+++ b/Mindbox.Data.Linq/Mindbox.Data.Linq.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Binary.cs" />
     <Compile Include="ChangeConflicts.cs" />
     <Compile Include="ChangeDirector.cs" />
     <Compile Include="ChangeProcessor.cs" />
@@ -53,11 +54,14 @@
     <Compile Include="DataShape.cs" />
     <Compile Include="DbConvert.cs" />
     <Compile Include="DbmlShared\Mapping.cs" />
+    <Compile Include="EntityRef.cs" />
     <Compile Include="EntitySetDataBindingList.cs" />
     <Compile Include="Exceptions.cs" />
     <Compile Include="FunctionResults.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="IdentityManager.cs" />
+    <Compile Include="ItemList.cs" />
+    <Compile Include="Link.cs" />
     <Compile Include="Mapping\Accessors.cs" />
     <Compile Include="Mapping\AssociationAttribute.cs" />
     <Compile Include="Mapping\AttributedMetaAssociation.cs" />
@@ -106,6 +110,7 @@
     <Compile Include="Provider\IDataServices.cs" />
     <Compile Include="Provider\IProvider.cs" />
     <Compile Include="SortableBindingList.cs" />
+    <Compile Include="SourceState.cs" />
     <Compile Include="SqlClient\Common\DbFormatter.cs" />
     <Compile Include="SqlClient\Common\Expressions.cs" />
     <Compile Include="SqlClient\Common\IConnectionManager.cs" />
@@ -205,7 +210,7 @@
     <Compile Include="System.Data.Entity\ModelConfiguration\Configuration\StructuralTypeConfiguration.cs" />
     <Compile Include="System.Data.Entity\ModelConfiguration\Configuration\ValueConditionConfiguration.cs" />
     <Compile Include="System.Data.Entity\ModelConfiguration\EntityTypeConfiguration.cs" />
-    <Compile Include="Types.cs" />
+    <Compile Include="EntitySet.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
