--- a/Mindbox.Data.Linq.Tests/Mindbox.Data.Linq.Tests.csproj
+++ b/Mindbox.Data.Linq.Tests/Mindbox.Data.Linq.Tests.csproj
@@ -36,6 +36,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Data" />
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
@@ -56,6 +58,7 @@
     <Compile Include="TestEntity1.cs" />
     <Compile Include="TestEntity2.cs" />
     <Compile Include="TestEntity3.cs" />
+    <Compile Include="TestEntity8.cs" />
     <Compile Include="TestEntity7.cs" />
     <Compile Include="TestEntity6.cs" />
     <Compile Include="TestEntity4.cs">
