Not null one-way lazy FK via EF Code First API

--- a/Mindbox.Data.Linq.Tests/Mindbox.Data.Linq.Tests.csproj
+++ b/Mindbox.Data.Linq.Tests/Mindbox.Data.Linq.Tests.csproj
@@ -58,6 +58,8 @@
     <Compile Include="TestEntity1.cs" />
     <Compile Include="TestEntity2.cs" />
     <Compile Include="TestEntity3.cs" />
+    <Compile Include="TestEntity10.cs" />
+    <Compile Include="TestEntity9.cs" />
     <Compile Include="TestEntity8.cs" />
     <Compile Include="TestEntity7.cs" />
     <Compile Include="TestEntity6.cs" />
