--- a/Mindbox.Data.Linq.Tests/Mindbox.Data.Linq.Tests.csproj
+++ b/Mindbox.Data.Linq.Tests/Mindbox.Data.Linq.Tests.csproj
@@ -59,6 +59,7 @@
     <Compile Include="TestEntity2.cs" />
     <Compile Include="TestEntity3.cs" />
     <Compile Include="TestEntity10.cs" />
+    <Compile Include="TestEntity11.cs" />
     <Compile Include="TestEntity9.cs" />
     <Compile Include="TestEntity8.cs" />
     <Compile Include="TestEntity7.cs" />
