--- a/Mindbox.Data.Linq.Tests/Mindbox.Data.Linq.Tests.csproj
+++ b/Mindbox.Data.Linq.Tests/Mindbox.Data.Linq.Tests.csproj
@@ -54,7 +54,10 @@
   <ItemGroup>
     <Compile Include="DbModelBuilderTests.cs" />
     <Compile Include="InheritanceConfigurationTests.cs" />
+    <Compile Include="IValueStorage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestEntity13.cs" />
+    <Compile Include="TestEntity12.cs" />
     <Compile Include="TestEntity1.cs" />
     <Compile Include="TestEntity2.cs" />
     <Compile Include="TestEntity3.cs" />
