Proxy implements change notifications
Proxy requires all properties to be virtual and at least protected.
Proxy implements INotifyPropertyChanging and INotifyPropertyChanged.
Proxy forbids entity to implement INotifyPropertyChanging and
INotifyPropertyChanged.

--- a/Mindbox.Data.Linq.Tests/Mindbox.Data.Linq.Tests.csproj
+++ b/Mindbox.Data.Linq.Tests/Mindbox.Data.Linq.Tests.csproj
@@ -65,6 +65,7 @@
     <Compile Include="TestEntity3.cs" />
     <Compile Include="TestEntity10.cs" />
     <Compile Include="TestEntity11.cs" />
+    <Compile Include="TestEntity16.cs" />
     <Compile Include="TestEntity9.cs" />
     <Compile Include="TestEntity8.cs" />
     <Compile Include="TestEntity7.cs" />
