--- a/Mindbox.Data.Linq/Mindbox.Data.Linq.nuspec
+++ b/Mindbox.Data.Linq/Mindbox.Data.Linq.nuspec
@@ -10,7 +10,11 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
     <projectUrl>https://github.com/mindbox-moscow/data-linq</projectUrl>
-    <releaseNotes>BUG: Selection into new object of unmapped type failed.</releaseNotes>
+    <releaseNotes>
+			Proxy requires all properties to be virtual and at least protected.
+			Proxy implements INotifyPropertyChanging and INotifyPropertyChanged.
+			Proxy forbids entity to implement INotifyPropertyChanging and INotifyPropertyChanged.
+		</releaseNotes>
     <copyright>Copyright 2015 Mindbox; Copyright ...-2014 Microsoft</copyright>
     <tags>linq iqueryable</tags>
   </metadata>
