The NuSpec file added to the solution

--- a/Mindbox.Data.Linq/Mindbox.Data.Linq.csproj
+++ b/Mindbox.Data.Linq/Mindbox.Data.Linq.csproj
@@ -240,6 +240,7 @@
     <Compile Include="TrackedObject.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Mindbox.Data.Linq.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
