--- a/Mindbox.Data.Linq/Mindbox.Data.Linq.nuspec
+++ b/Mindbox.Data.Linq/Mindbox.Data.Linq.nuspec
@@ -11,9 +11,7 @@
     <description>$description$</description>
     <projectUrl>https://github.com/mindbox-moscow/data-linq</projectUrl>
     <releaseNotes>
-			Proxy requires all properties to be virtual and at least protected.
-			Proxy implements INotifyPropertyChanging and INotifyPropertyChanged.
-			Proxy forbids entity to implement INotifyPropertyChanging and INotifyPropertyChanged.
+			Using proxies when possible for all entities which don't implement INotifyPropertyChanging and INotifyPropertyChanged.
 		</releaseNotes>
     <copyright>Copyright 2015 Mindbox; Copyright ...-2014 Microsoft</copyright>
     <tags>linq iqueryable</tags>
