--- a/Mindbox.Data.Linq.Tests/Mindbox.Data.Linq.Tests.csproj
+++ b/Mindbox.Data.Linq.Tests/Mindbox.Data.Linq.Tests.csproj
@@ -56,6 +56,8 @@
     <Compile Include="InheritanceConfigurationTests.cs" />
     <Compile Include="IValueStorage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestEntity19.cs" />
+    <Compile Include="TestEntity18.cs" />
     <Compile Include="TestEntity17.cs" />
     <Compile Include="TestEntity15.cs" />
     <Compile Include="TestEntity14.cs" />
