--- a/Mindbox.Data.Linq.Tests/Mindbox.Data.Linq.Tests.csproj
+++ b/Mindbox.Data.Linq.Tests/Mindbox.Data.Linq.Tests.csproj
@@ -56,6 +56,7 @@
     <Compile Include="InheritanceConfigurationTests.cs" />
     <Compile Include="IValueStorage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestEntity24.cs" />
     <Compile Include="TestEntity23.cs" />
     <Compile Include="TestEntity19.cs" />
     <Compile Include="TestEntity18.cs" />
