--- a/Mindbox.Data.Linq/Mindbox.Data.Linq.csproj
+++ b/Mindbox.Data.Linq/Mindbox.Data.Linq.csproj
@@ -51,8 +51,10 @@
     <Compile Include="ChangeConflicts.cs" />
     <Compile Include="ChangeDirector.cs" />
     <Compile Include="ChangeProcessor.cs" />
+    <Compile Include="ChangeSet.cs" />
     <Compile Include="ChangeTracker.cs" />
     <Compile Include="CompiledQuery.cs" />
+    <Compile Include="ConflictMode.cs" />
     <Compile Include="DataBindingList.cs" />
     <Compile Include="DataContext.cs" />
     <Compile Include="DataQuery.cs" />
@@ -66,6 +68,8 @@
     <Compile Include="FunctionResults.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="IdentityManager.cs" />
+    <Compile Include="ITable.cs" />
+    <Compile Include="ITable`1.cs" />
     <Compile Include="ItemList.cs" />
     <Compile Include="Link.cs" />
     <Compile Include="Mapping\EntitySetDefSourceAccessor.cs" />
@@ -133,9 +137,11 @@
     <Compile Include="Mindbox.Data.Linq\Mapping\ColumnAttributeByMember.cs" />
     <Compile Include="Mindbox.Data.Linq\Mapping\TableAttributeByRootType.cs" />
     <Compile Include="misc\SecurityUtils.cs" />
+    <Compile Include="ModifiedMemberInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Provider\IDataServices.cs" />
     <Compile Include="Provider\IProvider.cs" />
+    <Compile Include="RefreshMode.cs" />
     <Compile Include="SortableBindingList.cs" />
     <Compile Include="SourceState.cs" />
     <Compile Include="SqlClient\Common\DbFormatter.cs" />
@@ -239,6 +245,7 @@
     <Compile Include="System.Data.Entity\ModelConfiguration\Configuration\ValueConditionConfiguration.cs" />
     <Compile Include="System.Data.Entity\ModelConfiguration\EntityTypeConfiguration.cs" />
     <Compile Include="EntitySet.cs" />
+    <Compile Include="Table.cs" />
     <Compile Include="TrackedObject.cs" />
   </ItemGroup>
   <ItemGroup>
