Nuget publishing workflow
Modified .nuspec file so the release notes could be specified through
build system

--- a/Mindbox.Data.Linq/Mindbox.Data.Linq.nuspec
+++ b/Mindbox.Data.Linq/Mindbox.Data.Linq.nuspec
@@ -11,8 +11,8 @@
     <description>$description$</description>
     <projectUrl>https://github.com/mindbox-moscow/data-linq</projectUrl>
     <releaseNotes>
-			Optional one-way FK via EF Code First API.
-		</releaseNotes>
+        $releaseNotes$
+    </releaseNotes>
     <copyright>Copyright 2015 Mindbox; Copyright ...-2014 Microsoft</copyright>
     <tags>linq iqueryable</tags>
   </metadata>
