--- a/Mindbox.Data.Linq.Tests/Mindbox.Data.Linq.Tests.csproj
+++ b/Mindbox.Data.Linq.Tests/Mindbox.Data.Linq.Tests.csproj
@@ -35,14 +35,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Castle.Core, Version=4.1.1.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
-      <HintPath>..\packages\Castle.Core.4.1.1\lib\net45\Castle.Core.dll</HintPath>
+    <Reference Include="Castle.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <HintPath>..\packages\Castle.Core.4.2.1\lib\net45\Castle.Core.dll</HintPath>
     </Reference>
-    <Reference Include="Moq, Version=4.7.99.0, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
-      <HintPath>..\packages\Moq.4.7.99\lib\net45\Moq.dll</HintPath>
+    <Reference Include="Moq, Version=4.7.145.0, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
+      <HintPath>..\packages\Moq.4.7.145\lib\net45\Moq.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
   </ItemGroup>
   <Choose>
@@ -66,8 +67,12 @@
     <Compile Include="SqlGeneration\SomeDataContext.cs" />
     <Compile Include="SqlGeneration\UserDefinedFunctions.cs" />
     <Compile Include="SqlGeneration\UserDefinedFunctionTranslationTests.cs" />
-    <Compile Include="Stubs\DbCommandStub.cs" />
-    <Compile Include="Stubs\DbConnectionStub.cs" />
+    <Compile Include="Stubs\DbCommandStub.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Stubs\DbConnectionStub.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Stubs\DbParameterStub.cs" />
     <Compile Include="TestEntity24.cs" />
     <Compile Include="TestEntity23.cs" />
