--- a/Mindbox.Data.Linq/Mindbox.Data.Linq.csproj
+++ b/Mindbox.Data.Linq/Mindbox.Data.Linq.csproj
@@ -210,6 +210,7 @@
     <Compile Include="SqlClient\Query\TypeSource.cs" />
     <Compile Include="SqlClient\Reader\ObjectReader.cs" />
     <Compile Include="SqlClient\Reader\ObjectReaderCompiler.cs" />
+    <Compile Include="SqlClient\Reader\ReaderRowsPresenceMismatchException.cs" />
     <Compile Include="SqlClient\SqlBuilder.cs" />
     <Compile Include="SqlClient\SqlConnectionManager.cs" />
     <Compile Include="SqlClient\SqlMethods.cs" />
