- preparing nuget package

--- a/Mindbox.Data.Linq/Mindbox.Data.Linq.csproj
+++ b/Mindbox.Data.Linq/Mindbox.Data.Linq.csproj
@@ -2,8 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Company>Mindbox</Company>
+    <Version>2.0.1</Version>
+    <Product>Mindbox.Data.Linq</Product>
+    <Description>A clone of Microsoft System.Data.Linq to allow multi-DLL extensibility and EF compatibility.</Description>
+    <Copyright>Mindbox 2018</Copyright>
+    <Authors>Mindbox</Authors>
 	<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-	<Deterministic>false</Deterministic>
   </PropertyGroup>
 
   <ItemGroup>
