--- a/Mindbox.Data.Linq.Tests/Mindbox.Data.Linq.Tests.csproj
+++ b/Mindbox.Data.Linq.Tests/Mindbox.Data.Linq.Tests.csproj
@@ -20,4 +20,7 @@
     <PackageReference Include="MSTest.TestFramework" Version="3.0.2" />
     <PackageReference Include="Moq" Version="4.18.4" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="SqlGeneration\ObjectReaderCompilerTests.cs" />
+  </ItemGroup>
 </Project>
